--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,11 @@ android {
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
         applicationId "com.example.myapplication"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -31,6 +32,7 @@ android {
 
 dependencies {
 
+    implementation 'com.chaos.view:pinview:1.4.3'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.material:material:1.4.0'
@@ -41,16 +43,31 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
 
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    //api
+    implementation 'com.android.volley:volley:1.2.1'
+
+
+
+    //api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    implementation 'com.github.CanHub:Android-Image-Cropper:3.1.2'
+
+
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'jp.wasabeef:picasso-transformations:2.4.0'
 
     // https://mvnrepository.com/artifact/com.amulyakhare/com.amulyakhare.textdrawable
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
 
 }
+apply plugin: 'com.google.gms.google-services'
+
