--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     //api
     implementation 'com.android.volley:volley:1.2.1'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 
     //api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
