--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,16 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.code.gson:gson:2.8.7'
+
 
     implementation 'com.chaos.view:pinview:1.4.3'
     implementation 'com.android.support:appcompat-v7:28.0.0'
